Thu Jan 26 13:58:51 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/apps/freebcp.c src/apps/freebcp.h:
	- support for NUL in terminators

Wed Jan 25 15:33:20 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/dblib/bcp.c: fix return test for fseeko

Wed Jan 25 15:01:51 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* acinclude.m4 configure.in src/tds/numeric.c:
	- use 64bit sprintf format if available
	* misc/test-other.sh: redirect odbc to compiled driver

Tue Jan 24 16:01:41 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* NEWS include/tds.h src/apps/tsql.c src/ctlib/blk.c:
	* src/ctlib/ct.c src/dblib/bcp.c src/dblib/buffering.h:
	* src/dblib/dblib.c src/dblib/rpc.c src/odbc/odbc.c:
	* src/odbc/odbc_util.c src/odbc/prepare_query.c:
	* src/odbc/sql2tds.c src/pool/stream.c src/server/server.c:
	* src/tds/mem.c src/tds/query.c src/tds/tds_checks.c:
	* src/tds/token.c src/tds/unittests/dataread.c:
	* src/tds/unittests/dynamic1.c src/tds/unittests/t0002.c:
	* src/tds/unittests/t0004.c src/tds/unittests/t0005.c:
	* src/tds/unittests/t0006.c src/tds/unittests/utf8_1.c:
	* src/tds/unittests/utf8_2.c:
	- use direct pointer column_data instead of old column_offset

Mon Jan 23 17:30:38 EST 2006	JK Lowden <jklowden@schemamania.org>
	* src/apps/bsqldb.c bind to printable width, not column size

Mon Jan 23 14:04:44 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* configure.in: start developing 0.65 version

Wed Jan 11 10:42:16 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/test-other.sh: add parameters

Tue Jan 10 15:00:18 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* NEWS: updated

Mon Jan 09 14:25:09 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* win32/setup.rc: two controls was overlapped

Mon Jan 09 11:15:56 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/odbc.c: set state correctly if not available

Sat Jan 07 12:24:57 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/tds/mem.c: